; ModuleID = '/home/carl/AnghaBench/git/extr_list-objects-filter.c_filter_trees_free.c'
source_filename = "/home/carl/AnghaBench/git/extr_list-objects-filter.c_filter_trees_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filter_trees_depth_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @filter_trees_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filter_trees_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.filter_trees_depth_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.filter_trees_depth_data*
  store %struct.filter_trees_depth_data* %5, %struct.filter_trees_depth_data** %3, align 8
  %6 = load %struct.filter_trees_depth_data*, %struct.filter_trees_depth_data** %3, align 8
  %7 = icmp ne %struct.filter_trees_depth_data* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %15

9:                                                ; preds = %1
  %10 = load %struct.filter_trees_depth_data*, %struct.filter_trees_depth_data** %3, align 8
  %11 = getelementptr inbounds %struct.filter_trees_depth_data, %struct.filter_trees_depth_data* %10, i32 0, i32 0
  %12 = call i32 @oidmap_free(i32* %11, i32 1)
  %13 = load %struct.filter_trees_depth_data*, %struct.filter_trees_depth_data** %3, align 8
  %14 = call i32 @free(%struct.filter_trees_depth_data* %13)
  br label %15

15:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @oidmap_free(i32*, i32) #1

declare dso_local i32 @free(%struct.filter_trees_depth_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
